# villa_common

./: .travis.yml  README.md
report_generation/: CMakeLists.txt  Readme.md  package.xml  setup.py
report_generation/scripts/: report_generator
report_generation/srv/: RecordCupboard.srv  RecordFinalCupboard.srv
utexas/: CMakeLists.txt  package.xml  readme.md
villa_demos/scripts/: README.md  example_move.py  example_speech.py  teleop_twist_keyboard.py
villa_helpers/: CMakeLists.txt  README.md  package.xml  setup.py
villa_helpers/scripts/: capture_images  countdown_timer_visualizer  get_battery_state_value  vlogger
villa_helpers/src/villa_helpers/: fast_move.py  groovy_motion.py
villa_helpers/srv/: PersistentLog.srv  StartCountdown.srv
villa_msgs/: CMakeLists.txt  package.xml
villa_msgs/msg/: ObjectMap.msg  SegmentedObject.msg
villa_msgs/srv/: PickUpSrv.srv  TabletopSegmentation.srv
villa_simulation/: CMakeLists.txt  package.xml  readme.md
villa_simulation/maps/bwi_nav/simpearl/1/: locations.yaml  navigation_facts.asp  objects.yaml
villa_simulation/maps/bwi_nav/simpearl/2/: doors_map.pgm  locations.pgm  map.pgm
villa_simulation/maps/bwi_nav/simpearl/3/: doors_map.yaml  locations.pgm  locations.yaml  map.pgm
villa_simulation/maps/bwi_nav/simpearl/multimap/: one_level.yaml
villa_simulation/maps/bwi_nav/stage1_task1/1/: 1.pgm  doors_map.pgm  locations.pgm  locations.yaml  objects.yaml
villa_simulation/maps/bwi_nav/stage1_task1/2/: 2.yaml  doors_map.yaml  locations.yaml  objects.yaml
villa_simulation/maps/bwi_nav/stage1_task1/multimap/: one_level.yaml
villa_simulation/models/cupboard/: model.config  model.sdf
villa_simulation/models/wide_shelf/: model.config  model.sdf
villa_simulation/worlds/: groceries.world  groceries_fast.world
villa_teleop/: CMakeLists.txt  package.xml
villa_teleop/scripts/: keyboard_teleop
