<?xml version="1.0"?>
<package format="2">
  <name>report_generation</name>
  <version>0.0.0</version>
  <description>The report generation package</description>
  <maintainer email="justinrubio3634@utexas.edu">jrubio3634</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>  
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
</package>
