cmake_minimum_required(VERSION 2.8.3)
project(villa_helpers)

find_package(catkin REQUIRED COMPONENTS
    rospy
    std_msgs
    geometry_msgs
    message_generation
)

catkin_python_setup()

add_service_files(
    FILES
    PersistentLog.srv
    StartCountdown.srv
)

generate_messages(
    DEPENDENCIES
    std_msgs
    geometry_msgs
)

catkin_package(
    CATKIN_DEPENDS message_runtime
)


