<?xml version="1.0"?>
<package format="2">
  <name>villa_helpers</name>
  <version>0.0.0</version>
  <description>The villa_helpers package</description>

  <maintainer email="nick@todo.todo">nick</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>tmc_msgs</depend>

</package>
