<?xml version="1.0"?>
<package format="2">
  <name>villa_teleop</name>
  <version>0.3.12</version>
  <description>The villa_apps package</description>

  <maintainer email="hart@cs.utexas.edu">Justin Hart</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
